--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,8 +13,11 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-
-    <title>Front-end developer- Latoya Natasha</title>
+    <link rel="stylesheet" href="styles/portfolio.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Front-end developer Latoya Natasha</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Goededag</h1>
+  </body>
 </html>
