confirming that bootstrap is working

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <title>Front-end developer Latoya Natasha</title>
   </head>
   <body>
-    <h1>Goededag</h1>
-    <p>Hallo. Hoe gaat het met je?</p>
+    <div class="d-flex bg-warning">
+      <h1>Goededag</h1>
+      <p>Hallo. Hoe gaat het met je?</p>
+    </div>
   </body>
 </html>
