--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,13 +25,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Front-end developer Latoya Natasha</title>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Goededag</h1>
-      <p>Hallo. Hoe gaat het met je?</p>
+    <div class="hero">
+      <p>👋 Hello, I am</p>
+      <h1>Latoya Natasha Campbell</h1>
+      <h2>Front-end developer based in California</h2>
+      <a href="#" class="btn btn-branding">Contact me</a>
     </div>
   </body>
 </html>
