title added to introduce projects

--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
+    <p>Featured projects I enjoyed working on</p>
   </body>
 </html>
