--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
-    <p>Featured projects I enjoyed working on</p>
+    <p class="text-center m-5">Featured projects I enjoyed working on</p>
   </body>
 </html>
