--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
   </head>
   <body>
     <div class="hero">
-      <p>👋 Hello, I am</p>
-      <h1>Latoya Natasha Campbell</h1>
-      <h2 class="mb-5">Front-end developer based in California</h2>
+      <p class="text-center">👋 Hello, I am</p>
+      <h1 class="text-center">Latoya Natasha Campbell</h1>
+      <h2 class="mb-5 text-center">Front-end developer based in California</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="#" class="btn btn-branding text-center">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">Featured projects I enjoyed working on</p>
