testing style for mobile view

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   </head>
   <body>
     <div class="hero">
-      <p class="text-center">👋 Hello, I am</p>
-      <h1 class="text-center">Latoya Natasha Campbell</h1>
-      <h2 class="mb-5 text-center">Front-end developer based in California</h2>
+      <p>👋 Hello, I am</p>
+      <h1>Latoya Natasha Campbell</h1>
+      <h2 class="mb-5">Front-end developer based in California</h2>
       <div>
         <a href="#" class="btn btn-branding text-center">Contact me</a>
       </div>
