bootstrap is now dividing the columns evenly and only displaying image when screen is large.

--- a/index.html
+++ b/index.html
@@ -40,22 +40,24 @@
     <p class="text-center m-5">Featured projects I enjoyed working on</p>
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col d-none d-lg-block">
           <img
             src="images/hiking-project.png"
             class="img-fluid"
             alt="hiking project"
           />
         </div>
-        <div class="col-6">
-          <h2 class="mb-5">Hiking-Project</h2>
-          <p class="mb-4 text-muted">
-            I loved this project. I had such a great time working on this one. I
-            love how the images pop off the screen when you hover over them. In
-            this project I spoke about one of my favorite hobbies, hiking.
-            overall, I had so much fun on this one.
-          </p>
-          <a href="" class="btn btn-branding-outline">Launch Project</a>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Hiking Project</h2>
+            <p class="mb-4 text-muted">
+              I loved this project. I had such a great time working on this one.
+              I love how the images pop off the screen when you hover over them.
+              In this project I spoke about one of my favorite hobbies, hiking.
+              overall, I had so much fun on this one.
+            </p>
+            <a href="" class="btn btn-branding-outline">Launch Project</a>
+          </div>
         </div>
       </div>
     </div>
