all projects added to portfolio

--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
-            src="images/hiking-project.png"
+            src="images/forecast-project.png"
             class="img-fluid"
-            alt="hiking project"
+            alt="forecast project"
           />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Hiking Project</h2>
+            <h2 class="mb-5">Forecast Project</h2>
             <p class="mb-4 text-muted">
-              I loved this project. I had such a great time working on this one.
-              I love how the images pop off the screen when you hover over them.
-              In this project I spoke about one of my favorite hobbies, hiking.
-              overall, I had so much fun on this one.
+              I loved every second of this project. I really enjoyed working on
+              the forecast. It is truly stressful when I get stuck, but coding
+              feels like a puzzle game to me, and I have so much fun along the
+              way. It made me really happy to complete this project
             </p>
             <a href="" class="btn btn-branding-outline">Launch Project</a>
           </div>
@@ -84,19 +84,17 @@
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
-            src="images/hiking-project.png"
+            src="images/world-clock-project.png"
             class="img-fluid"
-            alt="hiking project"
+            alt="world clock project"
           />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Hiking Project</h2>
+            <h2 class="mb-5">World Clock Project</h2>
             <p class="mb-4 text-muted">
-              I loved this project. I had such a great time working on this one.
-              I love how the images pop off the screen when you hover over them.
-              In this project I spoke about one of my favorite hobbies, hiking.
-              overall, I had so much fun on this one.
+              This world clock project was so cute to work on. I love my pink
+              world clock. It was such a joy to build.
             </p>
             <a href="" class="btn btn-branding-outline">Launch Project</a>
           </div>
@@ -104,20 +102,16 @@
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img
-            src="images/hiking-project.png"
-            class="img-fluid"
-            alt="hiking project"
-          />
+          <img src="images/ai-project.png" class="img-fluid" alt="ai project" />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Hiking Project</h2>
+            <h2 class="mb-5">Ai Project</h2>
             <p class="mb-4 text-muted">
-              I loved this project. I had such a great time working on this one.
-              I love how the images pop off the screen when you hover over them.
-              In this project I spoke about one of my favorite hobbies, hiking.
-              overall, I had so much fun on this one.
+              My favorite of them all!!! I love love love my Ai poem generator.
+              And writing about this project right now just reminded me to go
+              use it. The poems are so sweet. This is my absolute favorite above
+              everything I've worked on.
             </p>
             <a href="" class="btn btn-branding-outline">Launch Project</a>
           </div>
