columns created to divide content on the page

--- a/about.html
+++ b/about.html
@@ -31,26 +31,32 @@
 
   <body>
     <div class="about-section container">
-      <h1>Hi I am Latoya Natasha Campbell</h1>
-      <h2>Front-end Developer basked in California</h2>
-      <p>
-        My name is Latoya Natasha Campbell. I live in California. I love self
-        development. I am always looking for new ways to improve my way of
-        thinking and being. I believe in continuous personal development. With a
-        bit of free time I had after giving birth to my son, I decided to take
-        up a hobby. I wanted to engage in an activity that I would both enjoy,
-        see the improvement and physically hold on to. I wanted something to
-        improve my way of thinking. Like a painting class or even yoga, I
-        decided to take up coding. So far, I'm loving every day of it and I've
-        decided that this is something that I would like to continue pursuing.
-      </p>
-      <a href="">See my projects</a>
-      <img
-        src="images/workphoto.png"
-        class="img-fluid"
-        width="25%"
-        alt="image of Latoya Natasha Campbell"
-      />
+      <div class="row">
+        <div class="col-6">
+          <h1>Hi I am Latoya Natasha Campbell</h1>
+          <h2>Front-end Developer basked in California</h2>
+          <p>
+            My name is Latoya Natasha Campbell. I live in California. I love
+            self development. I am always looking for new ways to improve my way
+            of thinking and being. I believe in continuous personal development.
+            With a bit of free time I had after giving birth to my son, I
+            decided to take up a hobby. I wanted to engage in an activity that I
+            would both enjoy, see the improvement and physically hold on to. I
+            wanted something to improve my way of thinking. Like a painting
+            class or even yoga, I decided to take up coding. So far, I'm loving
+            every day of it and I've decided that this is something that I would
+            like to continue pursuing.
+          </p>
+          <a href="">See my projects</a>
+        </div>
+        <div class="col-6">
+          <img
+            src="images/workphoto.png"
+            class="img-fluid"
+            alt="image of Latoya Natasha Campbell"
+          />
+        </div>
+      </div>
     </div>
   </body>
 </html>
