styles added to heading & paragraph

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
       <div class="row">
         <div class="col-6">
           <h1>Hi I am Latoya Natasha Campbell</h1>
-          <h2>Front-end Developer basked in California</h2>
+          <h2>Front-end Developer based in California</h2>
           <p>
             My name is Latoya Natasha Campbell. I live in California. I love
             self development. I am always looking for new ways to improve my way
