--- a/about.html
+++ b/about.html
@@ -32,27 +32,29 @@
   <body>
     <div class="about-section container">
       <div class="row">
-        <div class="col-6">
-          <h1>Hi I am Latoya Natasha Campbell</h1>
-          <h2>Front-end Developer based in California</h2>
-          <p>
-            My name is Latoya Natasha Campbell. I live in California. I love
-            self development. I am always looking for new ways to improve my way
-            of thinking and being. I believe in continuous personal development.
-            With a bit of free time I had after giving birth to my son, I
-            decided to take up a hobby. I wanted to engage in an activity that I
-            would both enjoy, see the improvement and physically hold on to. I
-            wanted something to improve my way of thinking. Like a painting
-            class or even yoga, I decided to take up coding. So far, I'm loving
-            every day of it and I've decided that this is something that I would
-            like to continue pursuing.
-          </p>
-          <a href="">See my projects</a>
+        <div class="col-md-6">
+          <div class="about-section-content">
+            <h1 class="mb-5">Hi I am Latoya</h1>
+            <h2 class="mb-5">Front-end Developer based in California</h2>
+            <p class="mb-5">
+              My name is Latoya Natasha Campbell. I live in California. I love
+              self development. I am always looking for new ways to improve my
+              way of thinking and being. I believe in continuous personal
+              development. With a bit of free time I had after giving birth to
+              my son, I decided to take up a hobby. I wanted to engage in an
+              activity that I would both enjoy, see the improvement and
+              physically hold on to. I wanted something to improve my way of
+              thinking. Like a painting class or even yoga, I decided to take up
+              coding. So far, I'm loving every day of it and I've decided that
+              this is something that I would like to continue pursuing.
+            </p>
+            <a href="" class="btn btn-branding">See my projects</a>
+          </div>
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
           <img
             src="images/workphoto.png"
-            class="img-fluid"
+            class="rounded img-fluid"
             alt="image of Latoya Natasha Campbell"
           />
         </div>
