work page styling complete and responsive

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="col d-none d-lg-block">
           <img
             src="images/hiking-project.png"
-            class="img-fluid"
+            class="img-fluid rounded"
             alt="hiking project"
           />
         </div>
@@ -76,7 +76,7 @@
         <div class="col d-none d-lg-block">
           <img
             src="images/forecast-project.png"
-            class="img-fluid"
+            class="img-fluid rounded"
             alt="forecast project"
           />
         </div>
@@ -85,7 +85,7 @@
         <div class="col d-none d-lg-block">
           <img
             src="images/world-clock-project.png"
-            class="img-fluid"
+            class="img-fluid rounded"
             alt="world clock project"
           />
         </div>
@@ -114,7 +114,11 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/ai-project.png" class="img-fluid" alt="ai project" />
+          <img
+            src="images/ai-project.png"
+            class="img-fluid rounded"
+            alt="ai project"
+          />
         </div>
       </div>
     </div>
