--- a/work.html
+++ b/work.html
@@ -32,10 +32,53 @@
   <body>
     <div class="content-container container">
       <div class="content">
-        <h1 class="mb-4">Take a look at what I've been working on</h1>
+        <h1 class="mb-5 text-center">
+          Take a look at what I've been working on
+        </h1>
 
         <div class="row">
-          <div class="col-6"></div>
+          <div class="col-md-6 mb-5">
+            <img
+              src="images/hiking-project.png"
+              class="img-fluid mb-3 rounded"
+              alt="hiking project"
+            />
+            <h3 class="text-center m-0">Hiking Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6 mb-5">
+            <img
+              src="images/forecast-project.png"
+              class="img-fluid mb-3 rounded"
+              alt="weather-forecast-project"
+            />
+            <h3 class="text-center m-0">Weather Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS and JAVASCRIPT
+            </p>
+          </div>
+          <div class="col-md-6 mb-5">
+            <img
+              src="images/world-clock-project.png"
+              class="img-fluid mb-3 rounded"
+              alt="world clock project"
+            />
+            <h3 class="text-center m-0">World Clock Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS and JAVASCRIPT
+            </p>
+          </div>
+          <div class="col-md-6 mb-5">
+            <img
+              src="images/ai-project.png"
+              class="img-fluid mb-3 rounded"
+              alt="ai poem generator project"
+            />
+            <h3 class="text-center m-0">Ai Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS and JAVASCRIPT
+            </p>
+          </div>
         </div>
       </div>
     </div>
