Contact page complete

--- a/work.html
+++ b/work.html
@@ -26,7 +26,7 @@
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
 
-    <title>Front-end developer Latoya Natasha</title>
+    <title>Front-end developer Latoya Campbell</title>
   </head>
 
   <body>
@@ -84,4 +84,3 @@
     </div>
   </body>
 </html>
-`
