--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
 
-    <title>Front-end developer Latoya Natasha</title>
+    <title>Front-end developer Latoya Campbell</title>
   </head>
 
   <body>
