added navigation bar outline to homepage

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
     <title>Front-end developer Latoya Campbell</title>
   </head>
   <body>
+    <nav>
+      <img src="" alt="" />
+      <ul>
+        <li>Home</li>
+        <li>About me</li>
+        <li>Work</li>
+        <li>Contact me</li>
+      </ul>
+    </nav>
     <div class="hero">
       <p>👋 Hello, I am</p>
       <h1>Latoya Natasha Campbell</h1>
