logo image added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <nav>
-      <img src="" alt="" />
+      <img src="images/shecodes-logo.png" alt="" />
       <ul>
         <li>Home</li>
         <li>About me</li>
