navigation is now aligned with logo

--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
     <title>Front-end developer Latoya Campbell</title>
   </head>
   <body>
-    <nav>
-      <img src="images/shecodes-logo.png" class="logo" alt="" />
-      <ul>
-        <li>Home</li>
-        <li>About me</li>
-        <li>Work</li>
-        <li>Contact me</li>
-      </ul>
-    </nav>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img src="images/shecodes-logo.png" class="logo" alt="" />
+        <ul>
+          <li>Home</li>
+          <li>About me</li>
+          <li>Work</li>
+          <li>Contact me</li>
+        </ul>
+      </nav>
+    </div>
     <div class="hero">
       <p>👋 Hello, I am</p>
       <h1>Latoya Natasha Campbell</h1>
