--- a/index.html
+++ b/index.html
@@ -33,10 +33,18 @@
       <nav class="d-flex justify-content-between">
         <img src="images/shecodes-logo.png" class="logo" alt="" />
         <ul>
-          <li>Home</li>
-          <li>About me</li>
-          <li>Work</li>
-          <li>Contact me</li>
+          <li>
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <a href="/about.html"> About me </a>
+          </li>
+          <li>
+            <a href="/work.html"> Work </a>
+          </li>
+          <li>
+            <a href="/contact.html"> Contact me </a>
+          </li>
         </ul>
       </nav>
     </div>
