--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <a href="/">Home</a>
           </li>
           <li>
-            <a href="/about.html"> About me </a>
+            <a href="/about.html">About me</a>
           </li>
           <li>
-            <a href="/work.html"> Work </a>
+            <a href="/work.html">My work</a>
           </li>
           <li>
-            <a href="/contact.html"> Contact me </a>
+            <a href="/contact.html">Contact me</a>
           </li>
         </ul>
       </nav>
