smaller logo added to images folder

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     <div class="container">
       <nav class="d-flex justify-content-between">
         <img src="images/shecodes-logo.png" class="logo" alt="" />
+        <img src="images/shecodes-smaller-logo.png" class="logo" alt="" />
         <ul>
-          <li>
+          <li class="active">
             <a href="/">Home</a>
           </li>
           <li>
