--- a/index.html
+++ b/index.html
@@ -31,8 +31,16 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <img src="images/shecodes-logo.png" class="logo" alt="" />
-        <img src="images/shecodes-smaller-logo.png" class="logo" alt="" />
+        <img
+          src="images/shecodes-logo.png"
+          class="logo d-none d-md-block"
+          alt="shecodes regular logo"
+        />
+        <img
+          src="images/shecodes-smaller-logo.png"
+          class="logo d-block d-md-none"
+          alt="shecodes smaller logo"
+        />
         <ul>
           <li class="active">
             <a href="/">Home</a>
