logo sends you back to homepage

--- a/index.html
+++ b/index.html
@@ -31,16 +31,18 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <img
-          src="images/shecodes-logo.png"
-          class="logo d-none d-md-block"
-          alt="shecodes regular logo"
-        />
-        <img
-          src="images/shecodes-smaller-logo.png"
-          class="logo d-block d-md-none"
-          alt="shecodes smaller logo"
-        />
+        <a href="/">
+          <img
+            src="images/shecodes-logo.png"
+            class="logo d-none d-md-block"
+            alt="shecodes regular logo"
+          />
+          <img
+            src="images/shecodes-smaller-logo.png"
+            class="logo d-block d-md-none"
+            alt="shecodes smaller logo"
+          />
+        </a>
         <ul>
           <li class="active">
             <a href="/">Home</a>
