nav bar included in all pages

--- a/about.html
+++ b/about.html
@@ -30,6 +30,34 @@
   </head>
 
   <body>
+    <nav class="d-flex justify-content-between">
+      <a href="/">
+        <img
+          src="images/shecodes-logo.png"
+          class="logo d-none d-md-block"
+          alt="shecodes regular logo"
+        />
+        <img
+          src="images/shecodes-smaller-logo.png"
+          class="logo d-block d-md-none"
+          alt="shecodes smaller logo"
+        />
+      </a>
+      <ul>
+        <li class="active">
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/about.html">About me</a>
+        </li>
+        <li>
+          <a href="/work.html">My work</a>
+        </li>
+        <li>
+          <a href="/contact.html">Contact me</a>
+        </li>
+      </ul>
+    </nav>
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
