--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://kit.fontawesome.com/c2656df97e.js"
-      crossorigin="anonymous"
-    ></script>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -151,6 +151,16 @@
           />
         </div>
       </div>
+      <footer>
+        <a href="mailto:Lnatashacampbell@gmail.com" class="email-link">
+          Lnatashacampbell@gmail.com
+        </a>
+        <div class="social-links text-center">
+          <a href="">
+            <span class="material-symbols-outlined"> contact_mail </span>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
