--- a/index.html
+++ b/index.html
@@ -152,12 +152,39 @@
         </div>
       </div>
       <footer>
-        <a href="mailto:Lnatashacampbell@gmail.com" class="email-link">
-          Lnatashacampbell@gmail.com
-        </a>
-        <div class="social-links text-center">
-          <a href="">
-            <span class="material-symbols-outlined"> contact_mail </span>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work inquiry</h4>
+            <p class="text-muted">Lets work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:Lnatashacampbell@gmail.com" class="email-link">
+            Lnatashacampbell@gmail.com
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="mailto:Lnatashacampbell@gmail.com" title="Email">
+            <span class="material-symbols-outlined"> mail </span>
+          </a>
+          <a
+            href="https://github.com/LatoyaNatashaC"
+            target="_blank"
+            title="Github"
+          >
+            <span class="material-symbols-outlined"> keyboard </span>
+          </a>
+          <a
+            href="https://www.instagram.com/natasha_kbell/"
+            target="_blank"
+            title="Instagram"
+          >
+            <span class="material-symbols-outlined"> person </span>
           </a>
         </div>
       </footer>
