titles added to navigation bar links

--- a/about.html
+++ b/about.html
@@ -25,13 +25,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
-
     <title>Front-end developer Latoya Campbell</title>
   </head>
 
   <body>
     <nav class="d-flex justify-content-between">
-      <a href="/">
+      <a href="/" title="Homepage">
         <img
           src="images/shecodes-logo.png"
           class="logo d-none d-md-block"
@@ -48,13 +47,13 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="/about.html">About me</a>
+          <a href="/about.html" title="About Latoya">About me</a>
         </li>
         <li>
-          <a href="/work.html">My work</a>
+          <a href="/work.html" title="Latoya's work">My work</a>
         </li>
         <li>
-          <a href="/contact.html">Contact me</a>
+          <a href="/contact.html" title="Contact Latoya">Contact me</a>
         </li>
       </ul>
     </nav>
