--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
+        <a href="/" title="Homepage">
           <img
             src="images/shecodes-logo.png"
             class="logo d-none d-md-block"
@@ -51,13 +51,13 @@
             <a href="/">Home</a>
           </li>
           <li>
-            <a href="/about.html">About me</a>
+            <a href="/about.html" title="About Latoya">About me</a>
           </li>
           <li>
-            <a href="/work.html">My work</a>
+            <a href="/work.html" title="Latoya's work">My work</a>
           </li>
           <li>
-            <a href="/contact.html">Contact me</a>
+            <a href="/contact.html" title="Contact Latoya">Contact me</a>
           </li>
         </ul>
       </nav>
