--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
       <h1>Latoya Natasha Campbell</h1>
       <h2 class="mb-5">Front-end developer based in California</h2>
       <div>
-        <a href="#" class="btn btn-branding text-center">Contact me</a>
+        <a
+          href="/contact.html"
+          class="btn btn-branding text-center"
+          title="Contact Latoya"
+          >Contact me</a
+        >
       </div>
     </div>
     <p class="text-center m-5">Featured projects I enjoyed working on</p>
@@ -159,11 +164,16 @@
           class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
         >
           <div>
-            <h4>Work inquiry</h4>
+            <h3>Work inquiry</h3>
             <p class="text-muted">Lets work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact Latoya"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
