projects linked to launch button

--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
               In this project I spoke about one of my favorite hobbies, hiking.
               overall, I had so much fun on this one.
             </p>
-            <a href="" class="btn btn-branding-outline">Launch Project</a>
+            <a
+              href="https://www.shecodes.io/cohorts/1855/projects/2223646?_gl=1*16u2zv4*_gcl_aw*R0NMLjE3MjAyMjM2MjUuQ2owS0NRandzNTYwQmhDdUFSSXNBSE1xRTBHU1RGZFpnd093YTJKN1dJWW9hLWN4eGhMNW9xYU0xczF2dGV6R0NzazM1eVNGcDhTbTRiNGFBcUUxRUFMd193Y0I.*_gcl_au*NjI1MTMxMzMxLjE3MTY1OTM0ODYuMTM3NjcwMjE3Mi4xNzIxNjgwNDQyLjE3MjE2ODA1MDQ."
+              target="_blank"
+              class="btn btn-branding-outline"
+              >Launch Project</a
+            >
           </div>
         </div>
       </div>
@@ -108,7 +113,12 @@
               feels like a puzzle game to me, and I have so much fun along the
               way. It made me really happy to complete this project
             </p>
-            <a href="" class="btn btn-branding-outline">Launch Project</a>
+            <a
+              href="https://www.shecodes.io/cohorts/1867/projects/2263810?_gl=1*142xpc4*_gcl_aw*R0NMLjE3MjAyMjM2MjUuQ2owS0NRandzNTYwQmhDdUFSSXNBSE1xRTBHU1RGZFpnd093YTJKN1dJWW9hLWN4eGhMNW9xYU0xczF2dGV6R0NzazM1eVNGcDhTbTRiNGFBcUUxRUFMd193Y0I.*_gcl_au*NjI1MTMxMzMxLjE3MTY1OTM0ODYuMTM3NjcwMjE3Mi4xNzIxNjgwNDQyLjE3MjE2ODA1MDQ."
+              target="_blank"
+              class="btn btn-branding-outline"
+              >Launch Project</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -134,7 +144,12 @@
               This world clock project was so cute to work on. I love my pink
               world clock. It was such a joy to build.
             </p>
-            <a href="" class="btn btn-branding-outline">Launch Project</a>
+            <a
+              href="https://www.shecodes.io/cohorts/1938/projects/2272377?_gl=1*nhbbnh*_gcl_aw*R0NMLjE3MjAyMjM2MjUuQ2owS0NRandzNTYwQmhDdUFSSXNBSE1xRTBHU1RGZFpnd093YTJKN1dJWW9hLWN4eGhMNW9xYU0xczF2dGV6R0NzazM1eVNGcDhTbTRiNGFBcUUxRUFMd193Y0I.*_gcl_au*NjI1MTMxMzMxLjE3MTY1OTM0ODYuMTM3NjcwMjE3Mi4xNzIxNjgwNDQyLjE3MjE2ODA1MDQ."
+              target="_blank"
+              class="btn btn-branding-outline"
+              >Launch Project</a
+            >
           </div>
         </div>
       </div>
@@ -148,7 +163,12 @@
               use it. The poems are so sweet. This is my absolute favorite above
               everything I've worked on.
             </p>
-            <a href="" class="btn btn-branding-outline">Launch Project</a>
+            <a
+              href="https://www.shecodes.io/cohorts/2002/projects/2307103?_gl=1*1rea9la*_gcl_aw*R0NMLjE3MjAyMjM2MjUuQ2owS0NRandzNTYwQmhDdUFSSXNBSE1xRTBHU1RGZFpnd093YTJKN1dJWW9hLWN4eGhMNW9xYU0xczF2dGV6R0NzazM1eVNGcDhTbTRiNGFBcUUxRUFMd193Y0I.*_gcl_au*NjI1MTMxMzMxLjE3MTY1OTM0ODYuMTM3NjcwMjE3Mi4xNzIxNjgwNDQyLjE3MjE2ODA1MDQ."
+              target="_blank"
+              class="btn btn-branding-outline"
+              >Launch Project</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -177,25 +197,29 @@
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:Lnatashacampbell@gmail.com" class="email-link">
+          <a
+            href="mailto:Lnatashacampbell@gmail.com"
+            class="email-link"
+            title="Email Latoya"
+          >
             Lnatashacampbell@gmail.com
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="mailto:Lnatashacampbell@gmail.com" title="Email">
+          <a href="mailto:Lnatashacampbell@gmail.com" title="Email Latoya">
             <span class="material-symbols-outlined"> mail </span>
           </a>
           <a
             href="https://github.com/LatoyaNatashaC"
             target="_blank"
-            title="Github"
+            title="Latoya's Github"
           >
             <span class="material-symbols-outlined"> keyboard </span>
           </a>
           <a
             href="https://www.instagram.com/natasha_kbell/"
             target="_blank"
-            title="Instagram"
+            title="Latoya's Instagram"
           >
             <span class="material-symbols-outlined"> person </span>
           </a>
