footer included in pages

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
               coding. So far, I'm loving every day of it and I've decided that
               this is something that I would like to continue pursuing.
             </p>
-            <a href="" class="btn btn-branding">See my projects</a>
+            <a href="/" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
@@ -86,6 +86,61 @@
           />
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h3>Work inquiry</h3>
+            <p class="text-muted">Lets work together</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact Latoya"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a
+            href="mailto:Lnatashacampbell@gmail.com"
+            class="email-link"
+            title="Email Latoya"
+          >
+            Lnatashacampbell@gmail.com
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="mailto:Lnatashacampbell@gmail.com" title="Email Latoya">
+            <span class="material-symbols-outlined"> mail </span>
+          </a>
+          <a
+            href="https://github.com/LatoyaNatashaC"
+            target="_blank"
+            title="Latoya's Github"
+          >
+            <span class="material-symbols-outlined"> keyboard </span>
+          </a>
+          <a
+            href="https://www.instagram.com/natasha_kbell/"
+            target="_blank"
+            title="Latoya's Instagram"
+          >
+            <span class="material-symbols-outlined"> person </span>
+          </a>
+        </div>
+        <p class="text-center mt-5">
+          This project was coded by Latoya Natasha Campbell and is
+          <a
+            href="https://github.com/LatoyaNatashaC/responsive-portfolio-homepage"
+            target="_blank"
+            >open-sourced</a
+          >
+          👩‍💻
+        </p>
+      </footer>
     </div>
   </body>
 </html>
