--- a/index.html
+++ b/index.html
@@ -224,6 +224,15 @@
             <span class="material-symbols-outlined"> person </span>
           </a>
         </div>
+        <p class="text-center mt-5">
+          This project was coded by Latoya Natasha Campbell and is
+          <a
+            href="https://github.com/LatoyaNatashaC/responsive-portfolio-homepage"
+            target="_blank"
+            >open-sourced</a
+          >
+          👩‍💻
+        </p>
       </footer>
     </div>
   </body>
