project description and about info updated

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Latoya is a front-end engineer based in California."
     />
-    <title>Front-end developer Latoya Campbell</title>
+    <title>Front-end developer Latoya Natasha Campbell</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -89,10 +89,10 @@
           <div class="project-description">
             <h2 class="mb-5">Hiking Project</h2>
             <p class="mb-4 text-muted">
-              I loved this project. I had such a great time working on this one.
-              I love how the images pop off the screen when you hover over them.
-              In this project I spoke about one of my favorite hobbies, hiking.
-              overall, I had so much fun on this one.
+              I thoroughly enjoyed working on this project. It was a blast,
+              especially seeing how the images come to life when you hover over
+              them. I focused on one of my favorite hobbies, hiking, and
+              overall, it was a fantastic experience.
             </p>
             <a
               href="https://www.shecodes.io/cohorts/1855/projects/2223646?_gl=1*16u2zv4*_gcl_aw*R0NMLjE3MjAyMjM2MjUuQ2owS0NRandzNTYwQmhDdUFSSXNBSE1xRTBHU1RGZFpnd093YTJKN1dJWW9hLWN4eGhMNW9xYU0xczF2dGV6R0NzazM1eVNGcDhTbTRiNGFBcUUxRUFMd193Y0I.*_gcl_au*NjI1MTMxMzMxLjE3MTY1OTM0ODYuMTM3NjcwMjE3Mi4xNzIxNjgwNDQyLjE3MjE2ODA1MDQ."
@@ -108,10 +108,11 @@
           <div class="project-description">
             <h2 class="mb-5">Forecast Project</h2>
             <p class="mb-4 text-muted">
-              I loved every second of this project. I really enjoyed working on
-              the forecast. It is truly stressful when I get stuck, but coding
-              feels like a puzzle game to me, and I have so much fun along the
-              way. It made me really happy to complete this project
+              I cherished every moment of this project. Working on the forecast
+              was particularly enjoyable. While it can be stressful when I hit a
+              snag, I find coding to be like a puzzle game, which makes the
+              process incredibly fun. Completing this project brought me a lot
+              of happiness.
             </p>
             <a
               href="https://www.shecodes.io/cohorts/1867/projects/2263810?_gl=1*142xpc4*_gcl_aw*R0NMLjE3MjAyMjM2MjUuQ2owS0NRandzNTYwQmhDdUFSSXNBSE1xRTBHU1RGZFpnd093YTJKN1dJWW9hLWN4eGhMNW9xYU0xczF2dGV6R0NzazM1eVNGcDhTbTRiNGFBcUUxRUFMd193Y0I.*_gcl_au*NjI1MTMxMzMxLjE3MTY1OTM0ODYuMTM3NjcwMjE3Mi4xNzIxNjgwNDQyLjE3MjE2ODA1MDQ."
@@ -141,8 +142,8 @@
           <div class="project-description">
             <h2 class="mb-5">World Clock Project</h2>
             <p class="mb-4 text-muted">
-              This world clock project was so cute to work on. I love my pink
-              world clock. It was such a joy to build.
+              Working on this world clock project was an absolute delight. I’m
+              especially fond of my pink world clock—it was a joy to create.
             </p>
             <a
               href="https://www.shecodes.io/cohorts/1938/projects/2272377?_gl=1*nhbbnh*_gcl_aw*R0NMLjE3MjAyMjM2MjUuQ2owS0NRandzNTYwQmhDdUFSSXNBSE1xRTBHU1RGZFpnd093YTJKN1dJWW9hLWN4eGhMNW9xYU0xczF2dGV6R0NzazM1eVNGcDhTbTRiNGFBcUUxRUFMd193Y0I.*_gcl_au*NjI1MTMxMzMxLjE3MTY1OTM0ODYuMTM3NjcwMjE3Mi4xNzIxNjgwNDQyLjE3MjE2ODA1MDQ."
@@ -158,10 +159,10 @@
           <div class="project-description">
             <h2 class="mb-5">Ai Project</h2>
             <p class="mb-4 text-muted">
-              My favorite of them all!!! I love love love my Ai poem generator.
-              And writing about this project right now just reminded me to go
-              use it. The poems are so sweet. This is my absolute favorite above
-              everything I've worked on.
+              This is my absolute favorite! I absolutely adore my AI poem
+              generator. Writing about this project now has reminded me to use
+              it again. The poems it creates are so charming. Out of everything
+              I’ve worked on, this one is by far my top pick.
             </p>
             <a
               href="https://www.shecodes.io/cohorts/2002/projects/2307103?_gl=1*1rea9la*_gcl_aw*R0NMLjE3MjAyMjM2MjUuQ2owS0NRandzNTYwQmhDdUFSSXNBSE1xRTBHU1RGZFpnd093YTJKN1dJWW9hLWN4eGhMNW9xYU0xczF2dGV6R0NzazM1eVNGcDhTbTRiNGFBcUUxRUFMd193Y0I.*_gcl_au*NjI1MTMxMzMxLjE3MTY1OTM0ODYuMTM3NjcwMjE3Mi4xNzIxNjgwNDQyLjE3MjE2ODA1MDQ."
