--- a/about.html
+++ b/about.html
@@ -68,16 +68,15 @@
             <h1 class="mb-5">Hi I am Latoya</h1>
             <h2 class="mb-5">Front-end Developer based in California</h2>
             <p class="mb-5">
-              My name is Latoya Natasha Campbell. I live in California. I love
-              self development. I am always looking for new ways to improve my
-              way of thinking and being. I believe in continuous personal
-              development. With a bit of free time I had after giving birth to
-              my son, I decided to take up a hobby. I wanted to engage in an
-              activity that I would both enjoy, see the improvement and
-              physically hold on to. I wanted something to improve my way of
-              thinking. Like a painting class or even yoga, I decided to take up
-              coding. So far, I'm loving every day of it and I've decided that
-              this is something that I would like to continue pursuing.
+              My name is Latoya Natasha Campbell, and I live in California. I’m
+              passionate about self-development and constantly seek new ways to
+              enhance my thinking and personal growth. I believe in ongoing
+              personal improvement. After having my son, I found myself with
+              some free time and wanted to pick up a hobby that would be
+              enjoyable, show visible progress, and provide a tangible result. I
+              considered options like painting or yoga but ultimately chose
+              coding. I’m thoroughly enjoying it and have decided that I want to
+              continue pursuing this interest.
             </p>
             <a href="/" class="btn btn-branding">See my projects</a>
           </div>
